<resources>
    <string name="app_name">EasyTouch</string>
    <string name="float_home">主屏幕</string>
    <string name="float_screenshot">截屏</string>
    <string name="float_click">连点</string>
    <string name="float_hack">挂</string>
    <string name="arrow">▼</string>
    <string name="arrowLast">▲</string>
    <string name="accessSet">ACCESS_SETTINGS</string>
    <string name="appSet">APP_SETTINGS</string>
    <string name="float_moveDistance">拖拽启动距离</string>
    <string name="type_autoclick">连点</string>
    <string name="type_hy">海洋挂机</string>
    <string name="type_screenshot">截屏</string>
    <string name="type_recent">最近打开的程序</string>
    <string name="type_notification">通知栏显示</string>
    <string name="type_volumn">音量控制</string>
    <string name="type_torch">手电筒</string>
    <string name="type_favorite">常用应用</string>
    <string name="copyright">毛欣出品 球球最棒！！</string>
    <string name="delay">延时</string>
</resources>
